--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<h2>Hello and welcome to my English learning website!</h2>
+<h2>Hello and welcome to my website!</h2>
 
-It does not matter if you are young or old, a student or a senior citizen, a housewife or a lawyer, short or tall, 
+It does not matter if you are young or old, a student or a senior citizen, a housewife or an established professional, miserable at languages
+<p>
+  or a polyglot.
 <br>
-happy or miserable. All that does matter is your love for languages and a healthy dose of curiosity. I am certain you
-<br>
-have them both, or you would not be reading this :) 
+All that does matter is your love for languages and a healthy dose of curiosity. I am certain you
+<p>
+  have them both, or you would not be reading this :) 
 <p>
   <q>To learn a language is to have one more window from which to look at the world.</q> – Chinese proverb.
 <p>
@@ -17,11 +19,14 @@ My name is Mareta and I am a student at <a href="http://www.ttu.ee">Tallinn Univ
 <p>
 for 3 years I now enjoy teaching English to both school students and adults. I have organised English language conversation
   <p>
-    sessions for adult learners at Tallinn Central Library for the past two years, as well as taught students one-on-one. 
+    sessions for adult learners at Tallinn Central Library for the past two years, as well as taught students of various ages on a 
+    <p>
+      one-on-one basis. 
 <h3>Courses</h3>
-Private lessons are organised in Tallinn for students of different ages and various levels. Please get in touch for more information via contact
+Private lessons are organised in Tallinn for all age groups and levels. Please get in touch for more information via contact
 <p>
-details below.
+  details below.
+<br>
 <h3>Price list</h3>
 <table style="width:50%">
   <tr>
