--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@ Private lessons are organised in Tallinn for all age groups and levels. If you a
 <h3>Price list</h3>
 <table style="width:50%">
   <tr>
-    <th>Day</th>
-    <th>Time</th>
-    <th>Price (EUR, 45 min)</th>
+    <h4>Day</h4>
+    <h4>Time</h4>
+    <h4>Price (EUR, 45 min)</h4>
   </tr>
     <tr>
-    <td>Monday - Friday</td>
+    <td>Weekday</td>
     <td>9 AM - 4 PM</td>
     <td>20</td>
   </tr>
     <tr>
-    <td>Monday - Friday</td>
+    <td>Weekday</td>
     <td>4 PM - 7 PM</td>
     <td>25</td>
   </tr>
   <tr>
-    <td>Saturday, Sunday</td>
+    <td>Weekend</td>
     <td>11 AM - 4 PM</td>
     <td>30</td>
   </tr>
@@ -49,8 +49,3 @@ I look forward to working with you.
 Mareta
 <br>
 193342
-
-
-
-
-
