--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@ Private lessons are organised in Tallinn for all age groups and levels. If you a
 <br>
 <h3>Price list</h3>
 <table style="width:50%">
-  <td>
-    <h4>Day</h4>
-    <h4>Time</h4>
-    <h4>Price (EUR, 45 min)</h4>
-  </td>
+  <tr>
+    <th4>Day</th4>
+    <th4>Time</th4>
+    <th4>Price (EUR, 45 min)</th4>
+  </tr>
     <tr>
     <td>Weekday</td>
     <td>9 AM - 4 PM</td>
@@ -43,9 +43,9 @@ Private lessons are organised in Tallinn for all age groups and levels. If you a
   </tr>
 </table>
 <br>
-<h3>Get in touch</h3>
-Do not hesitate to get in touch by phoning +3721234567.
-I look forward to working with you.
+<h3>Getting in touch</h3>
+Interested in discussing possibilities? Curious about the specifics? Do not hesitate to get in touch by phoning +372 123 4567.
+See you in the classroom!
 <br>
 <br>
 Mareta
