--- a/index.html
+++ b/index.html
@@ -13,18 +13,19 @@ On this site you can find information about my previous experience as a tutor, i
 <p>
   <a href= "https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwjL9pPP4MnlAhUMqYsKHdiOD2YQjRx6BAgBEAQ&url=https%3A%2F%2Fwww.epfl.ch%2Feducation%2Fadmission%2Fenglish-skills%2F&psig=AOvVaw0-1cIYMTLkGGWL1BBHd_NW&ust=1572723134248346">Source</a>
 <h3>About me</h3>
-My name is Mareta and I am a student at <a href="http://www.ttu.ee">Tallinn University of Technology.</a> Having lived in the UK for 3 years I now enjoy teaching English to both school students and adults. I have organised English language conversation
-  <p>
-    sessions for adult learners at Tallinn Central Library for the past two years, as well as taught students of various ages on a one-on-one basis. 
+My name is Mareta and I am a student at <a href="http://www.ttu.ee">Tallinn University of Technology.</a> Having lived in the United Kingdom for 3 years I now enjoy teaching 
+<p> English to both youngsters and adults. I have organised English language conversation sessions for adult learners at Tallinn Central Library for the past two years, 
+  <p> as well as taught students of various ages on a one-on-one basis. 
 <h3>Courses</h3>
-Private lessons are organised in Tallinn for all age groups and levels. If you are interested in improving your spoken and written English, or you think that your reading, listening or grammar could be a tiny bit better, you have come to the right place!
+Private lessons are organised in Tallinn for all age groups and levels. If you are interested in improving your spoken and written English, or you would like to become better 
+<p> at reading, listening or grammar, you have come to the right place!
 <br>
 <h3>Price list</h3>
 <table style="width:50%">
   <tr>
-    <th4>Day</th4>
-    <th4>Time</th4>
-    <th4>Price (EUR, 45 min)</th4>
+    <th>Day</th>
+    <th>Time</th>
+    <th>Price (EUR, 45 min)</th>
   </tr>
     <tr>
     <td>Weekday</td>
