--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ My name is Mareta and I am a student at <a href="http://www.ttu.ee">Tallinn Univ
   <p> as well as taught students of various ages on a one-on-one basis. 
 <h3>Courses</h3>
 Private lessons are organised in Tallinn for all age groups and levels. If you are interested in improving your spoken and written English, or you would like to become better 
-<p> at reading, listening or grammar, you have come to the right place!
+<p> at reading, listening and grammar, you have come to the right place!
 <br>
 <h3>Price list</h3>
 <table style="width:50%">
