--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ Private lessons are organised in Tallinn for all age groups and levels. If you a
 <br>
 <h3>Price list</h3>
 <table style="width:50%">
+th {text-align: left}  
   <tr>
     <th>Day</th>
     <th>Time</th>
