--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@ Private lessons are organised in Tallinn for all age groups and levels. If you a
 <br>
 <h3>Price list</h3>
 <table style="width:50%">
-th {text-align: left}  
+<style>
+  th {text-align: left} 
+ </style>
   <tr>
     <th>Day</th>
     <th>Time</th>
