--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@ Private lessons are organised in Tallinn for all age groups and levels. If you a
 <h3>Price list</h3>
 <table style="width:50%">
 <style>
-  th {text-align: left} 
+  th {
+    text-align: left
+  } 
  </style>
   <tr>
     <th>Day</th>
