--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@ On this site you can find information about my previous experience as a tutor, i
   <a href= "https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwjL9pPP4MnlAhUMqYsKHdiOD2YQjRx6BAgBEAQ&url=https%3A%2F%2Fwww.epfl.ch%2Feducation%2Fadmission%2Fenglish-skills%2F&psig=AOvVaw0-1cIYMTLkGGWL1BBHd_NW&ust=1572723134248346">Source</a>
 <h3>About me</h3>
 My name is Mareta and I am a student at <a href="http://www.ttu.ee">Tallinn University of Technology.</a> Having lived in the United Kingdom for 3 years I now enjoy teaching 
-<p> English to both youngsters and adults. I have organised English language conversation sessions for adult learners at Tallinn Central Library for the past two years, 
-  <p> as well as taught students of various ages on a one-on-one basis. 
+<br> English to both youngsters and adults. I have organised English language conversation sessions for adult learners at Tallinn Central Library for the past two years, 
+  <br> as well as taught students of various ages on a one-on-one basis. 
 <h3>Courses</h3>
 Private lessons are organised in Tallinn for all age groups and levels. If you are interested in improving your spoken and written English, or you would like to become better 
-<p> at reading, listening and grammar, you have come to the right place!
+<br> at reading, listening and grammar, you have come to the right place!
 <br>
 <h3>Price list</h3>
 <table style="width:50%">
@@ -51,6 +51,7 @@ Private lessons are organised in Tallinn for all age groups and levels. If you a
 <br>
 <h3>Getting in touch</h3>
 Interested in discussing possibilities? Curious about the specifics? Do not hesitate to get in touch by phoning +372 123 4567.
+<br>
 See you in the classroom!
 <br>
 <br>
