--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@ Scroll down to read about my previous experience as an English tutor, familiaris
 <p>
   <a href= "https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwjL9pPP4MnlAhUMqYsKHdiOD2YQjRx6BAgBEAQ&url=https%3A%2F%2Fwww.epfl.ch%2Feducation%2Fadmission%2Fenglish-skills%2F&psig=AOvVaw0-1cIYMTLkGGWL1BBHd_NW&ust=1572723134248346">Source</a>
 <h3>About me</h3>
-My name is Mareta and I am a student at <a href="http://www.ttu.ee">Tallinn University of Technology.</a> Having lived in the United Kingdom for 3 years I now enjoy teaching 
-<br> English to both youngsters and adults. I have organised English language conversation sessions for adult learners at Tallinn Central Library for the past two years, 
+My name is Mareta and I am a student at <a href="http://www.ttu.ee">Tallinn University of Technology.</a> Having lived in the United Kingdom for three years I now enjoy teaching 
+<br> English to both adolescents and adults. I have organised English language conversation sessions for adult learners at Tallinn Central Library for the past two years, 
   <br> as well as taught students of various ages on a one-on-one basis. 
 <h3>Courses</h3>
-Private lessons are organised in Tallinn for all age groups and levels. If you are interested in improving your spoken and written English, or you would like to become better 
+I give private lessons in Tallinn to students of all age groups and levels. If you are interested in improving your spoken and written English, or dream of becoming better 
 <br> at reading, listening and grammar, you have come to the right place!
 <br>
 <h3>Price list</h3>
