--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ All that does matter is your love for languages and a healthy dose of curiosity.
 <p>
 Do you agree with the following Chinese proverb? <i>"To learn a language is to have one more window from which to look at the world."</i> So do I!
 <p>
-Scroll down to read about my previous experience as an English tutor, familiarise yourself with the possibilities of becoming a fluent English speaker, 
+Scroll down to read about my previous experience as an English tutor, familiarise yourself with the possibilities of improving your level of English, 
   <br> and get a feel for the price list. Perhaps we can embark on this language - learning journey together.
 <br> 
   <br>
