--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ My name is Mareta and I am a student at <a href="http://www.ttu.ee">Tallinn Univ
 <br> English to both adolescents and adults. I have organised English language conversation sessions for adult learners at Tallinn Central Library for the 
   <br> past two years, as well as taught students of various ages on a one-on-one basis. 
 <h3>Courses</h3>
-I give private lessons in Tallinn to students of all age groups and levels. If you are interested in improving your spoken and written English, or dream of becoming better 
-<br> at reading, listening and grammar, you have come to the right place!
+I give private lessons in Tallinn to students of all age groups and levels. If you are interested in improving your spoken and written English, or dream 
+  <br> of becoming better at reading, listening and grammar, you have come to the right place!
 <br>
 <h3>Price list</h3>
 <table style="width:50%">
