--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ I give private lessons in Tallinn to students of all age groups and levels. If y
   <br> of becoming better at reading, listening and grammar, you have come to the right place!
 <br>
 <h3>Price list</h3>
+Lessons can be scheduled for 9 AM - 7 PM on weekdays and for 11 AM - 4 PM on weekends. Fees are dependent on the day and time of the lesson as illustrated in the table below. 
 <table style="width:50%">
 <style>
   th {
