--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Lessons can be scheduled for 9 AM - 7 PM on weekdays and for 11 AM - 4 PM on wee
   <tr>
     <th>Day</th>
     <th>Time</th>
-    <th>Price (EUR, 45 min)</th>
+    <th>Price (EUR, 45 min, excl. VAT)</th>
   </tr>
     <tr>
     <td>Weekday</td>
