--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
   </tr>
 </table>
 <h3>Getting in touch</h3>
-<p>Interested in discussing possibilities? Curious about the specifics? Do not hesitate to get in touch by phoning +372 123 4567.</p>
-  <p>See you in the classroom!</p>
-  <p>Mareta</p>
-  <p>193342</p>
+<p>Interested in discussing possibilities? Curious about the specifics? Do not hesitate to get in touch by phoning +372 123 4567.<br>See you in the classroom!</p>
+  <p>Mareta<br>193342</p>
 </body>
 </html>
